mdapipkg/objects/Country_Region__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List to use for mapping of Country/State to Region</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Owner__c</fullName>
        <label>Welcome Call Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Country/Region</label>
</CustomObject>